// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compute-element-view > view of cloud (exclude cloud, amazon.*) 1`] = `
{
  "autoLayout": "TB",
  "edges": [
    {
      "id": "cloud.frontend:cloud.backend",
      "label": null,
      "parent": null,
      "relations": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "source": "cloud.frontend",
      "target": "cloud.backend",
    },
    {
      "id": "customer:cloud.frontend",
      "label": null,
      "parent": null,
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud.frontend",
    },
    {
      "id": "support:cloud.frontend",
      "label": null,
      "parent": null,
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud.frontend",
    },
  ],
  "id": "cloud",
  "nodes": [
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "customer",
      "kind": "actor",
      "parent": null,
      "shape": "person",
      "tags": [],
      "technology": null,
      "title": "customer",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "support",
      "kind": "actor",
      "parent": null,
      "shape": "person",
      "tags": [],
      "technology": null,
      "title": "support",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "cloud.frontend",
      "kind": "container",
      "parent": null,
      "shape": "browser",
      "tags": [],
      "technology": null,
      "title": "frontend",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "cloud.backend",
      "kind": "container",
      "parent": null,
      "shape": "rectangle",
      "tags": [],
      "technology": null,
      "title": "backend",
    },
  ],
  "rules": [
    {
      "exprs": [
        {
          "wildcard": true,
        },
      ],
      "isInclude": true,
    },
    {
      "exprs": [
        {
          "element": "cloud",
          "isDescedants": false,
        },
        {
          "element": "amazon",
          "isDescedants": true,
        },
      ],
      "isInclude": false,
    },
  ],
  "title": "",
  "viewOf": "cloud",
}
`;

exports[`compute-element-view > view of cloud 1`] = `
{
  "autoLayout": "TB",
  "edges": [
    {
      "id": "cloud.frontend:cloud.backend",
      "label": null,
      "parent": "cloud",
      "relations": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "source": "cloud.frontend",
      "target": "cloud.backend",
    },
    {
      "id": "cloud.backend:amazon",
      "label": null,
      "parent": null,
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend",
      "target": "amazon",
    },
    {
      "id": "customer:cloud.frontend",
      "label": null,
      "parent": null,
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud.frontend",
    },
    {
      "id": "support:cloud.frontend",
      "label": null,
      "parent": null,
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud.frontend",
    },
  ],
  "id": "cloud",
  "nodes": [
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "customer",
      "kind": "actor",
      "parent": null,
      "shape": "person",
      "tags": [],
      "technology": null,
      "title": "customer",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "support",
      "kind": "actor",
      "parent": null,
      "shape": "person",
      "tags": [],
      "technology": null,
      "title": "support",
    },
    {
      "children": [
        "cloud.frontend",
        "cloud.backend",
      ],
      "color": "primary",
      "description": null,
      "id": "cloud",
      "kind": "system",
      "parent": null,
      "shape": "rectangle",
      "tags": [],
      "technology": null,
      "title": "cloud",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "cloud.frontend",
      "kind": "container",
      "parent": "cloud",
      "shape": "browser",
      "tags": [],
      "technology": null,
      "title": "frontend",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "cloud.backend",
      "kind": "container",
      "parent": "cloud",
      "shape": "rectangle",
      "tags": [],
      "technology": null,
      "title": "backend",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "amazon",
      "kind": "system",
      "parent": null,
      "shape": "rectangle",
      "tags": [],
      "technology": null,
      "title": "amazon",
    },
  ],
  "rules": [
    {
      "exprs": [
        {
          "wildcard": true,
        },
      ],
      "isInclude": true,
    },
  ],
  "title": "",
  "viewOf": "cloud",
}
`;

exports[`compute-element-view > view of cloud.frontend 1`] = `
{
  "autoLayout": "TB",
  "edges": [
    {
      "id": "cloud.frontend.adminPanel:cloud.backend",
      "label": null,
      "parent": null,
      "relations": [
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "source": "cloud.frontend.adminPanel",
      "target": "cloud.backend",
    },
    {
      "id": "cloud.frontend.dashboard:cloud.backend",
      "label": null,
      "parent": null,
      "relations": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
      ],
      "source": "cloud.frontend.dashboard",
      "target": "cloud.backend",
    },
    {
      "id": "customer:cloud.frontend.dashboard",
      "label": null,
      "parent": null,
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud.frontend.dashboard",
    },
    {
      "id": "support:cloud.frontend.adminPanel",
      "label": null,
      "parent": null,
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud.frontend.adminPanel",
    },
  ],
  "id": "cloudfrontend",
  "nodes": [
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "customer",
      "kind": "actor",
      "parent": null,
      "shape": "person",
      "tags": [],
      "technology": null,
      "title": "customer",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "support",
      "kind": "actor",
      "parent": null,
      "shape": "person",
      "tags": [],
      "technology": null,
      "title": "support",
    },
    {
      "children": [
        "cloud.frontend.adminPanel",
        "cloud.frontend.dashboard",
      ],
      "color": "primary",
      "description": null,
      "id": "cloud.frontend",
      "kind": "container",
      "parent": null,
      "shape": "browser",
      "tags": [],
      "technology": null,
      "title": "frontend",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "cloud.frontend.adminPanel",
      "kind": "component",
      "parent": "cloud.frontend",
      "shape": "rectangle",
      "tags": [
        "old",
      ],
      "technology": null,
      "title": "adminPanel",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "cloud.frontend.dashboard",
      "kind": "component",
      "parent": "cloud.frontend",
      "shape": "rectangle",
      "tags": [],
      "technology": null,
      "title": "dashboard",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "cloud.backend",
      "kind": "container",
      "parent": null,
      "shape": "rectangle",
      "tags": [],
      "technology": null,
      "title": "backend",
    },
  ],
  "rules": [
    {
      "exprs": [
        {
          "wildcard": true,
        },
      ],
      "isInclude": true,
    },
  ],
  "title": "",
  "viewOf": "cloud.frontend",
}
`;

exports[`compute-element-view > view with 3 levels 1`] = `
{
  "autoLayout": "TB",
  "edges": [
    {
      "id": "cloud.frontend.adminPanel:cloud.backend.graphql",
      "label": null,
      "parent": "cloud",
      "relations": [
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "source": "cloud.frontend.adminPanel",
      "target": "cloud.backend.graphql",
    },
    {
      "id": "cloud.frontend.dashboard:cloud.backend.graphql",
      "label": null,
      "parent": "cloud",
      "relations": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
      ],
      "source": "cloud.frontend.dashboard",
      "target": "cloud.backend.graphql",
    },
    {
      "id": "cloud.backend.graphql:cloud.backend.storage",
      "label": null,
      "parent": "cloud.backend",
      "relations": [
        "cloud.backend.graphql:cloud.backend.storage",
      ],
      "source": "cloud.backend.graphql",
      "target": "cloud.backend.storage",
    },
    {
      "id": "cloud.backend.storage:amazon",
      "label": null,
      "parent": null,
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend.storage",
      "target": "amazon",
    },
    {
      "id": "customer:cloud.frontend.dashboard",
      "label": null,
      "parent": null,
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud.frontend.dashboard",
    },
    {
      "id": "support:cloud.frontend.adminPanel",
      "label": null,
      "parent": null,
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud.frontend.adminPanel",
    },
  ],
  "id": "cloud3levels",
  "nodes": [
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "customer",
      "kind": "actor",
      "parent": null,
      "shape": "person",
      "tags": [],
      "technology": null,
      "title": "customer",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "support",
      "kind": "actor",
      "parent": null,
      "shape": "person",
      "tags": [],
      "technology": null,
      "title": "support",
    },
    {
      "children": [
        "cloud.frontend.adminPanel",
        "cloud.frontend.dashboard",
        "cloud.backend",
      ],
      "color": "primary",
      "description": null,
      "id": "cloud",
      "kind": "system",
      "parent": null,
      "shape": "rectangle",
      "tags": [],
      "technology": null,
      "title": "cloud",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "cloud.frontend.adminPanel",
      "kind": "component",
      "parent": "cloud",
      "shape": "rectangle",
      "tags": [
        "old",
      ],
      "technology": null,
      "title": "adminPanel",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "cloud.frontend.dashboard",
      "kind": "component",
      "parent": "cloud",
      "shape": "rectangle",
      "tags": [],
      "technology": null,
      "title": "dashboard",
    },
    {
      "children": [
        "cloud.backend.graphql",
        "cloud.backend.storage",
      ],
      "color": "primary",
      "description": null,
      "id": "cloud.backend",
      "kind": "container",
      "parent": "cloud",
      "shape": "rectangle",
      "tags": [],
      "technology": null,
      "title": "backend",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "cloud.backend.graphql",
      "kind": "component",
      "parent": "cloud.backend",
      "shape": "rectangle",
      "tags": [],
      "technology": null,
      "title": "graphql",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "cloud.backend.storage",
      "kind": "component",
      "parent": "cloud.backend",
      "shape": "rectangle",
      "tags": [
        "old",
      ],
      "technology": null,
      "title": "storage",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "amazon",
      "kind": "system",
      "parent": null,
      "shape": "rectangle",
      "tags": [],
      "technology": null,
      "title": "amazon",
    },
  ],
  "rules": [
    {
      "exprs": [
        {
          "wildcard": true,
        },
        {
          "element": "cloud.frontend",
          "isDescedants": true,
        },
        {
          "element": "cloud.backend",
          "isDescedants": true,
        },
      ],
      "isInclude": true,
    },
    {
      "exprs": [
        {
          "element": "cloud.frontend",
          "isDescedants": false,
        },
      ],
      "isInclude": false,
    },
  ],
  "title": "",
  "viewOf": "cloud",
}
`;
